# ST-Tactical

./: .gitignore  CMakeLists.txt  DEVLOG.md  Makefile  README.md  dashboard_lines.txt  fix.py  fix2.py  fix3.py  fix_align.py  fix_align10.py  fix_align11.py  fix_align12.py  fix_align2.py  fix_align3.py  fix_align4.py  fix_align5.py  fix_align6.py  fix_align7.py  fix_align8.py  fix_align9.py  fix_all.py  fix_all2.py  fix_compilation.py  fix_compile.py  fix_cond.py  fix_dash.py  fix_dash3.py  fix_dash_brace.py  fix_dash_c.py  fix_dash_log.py  fix_dots.py  fix_galaxy.py  fix_galaxy_c.py  fix_h.py  fix_lines.py  fix_map.c  fix_map.py  fix_map_layout.py  fix_mem.py  (+18 more)
docs/: MANUAL.md  REGRAS.md  REVIEW_CLAUDIO_001.md  mockup tela principal LRS.txt  mockup tela principal SRS.txt  mockup tela principal SRS.txt.antigo
include/game/: commands.h  dashboard.h  enterprise.h  galaxy.h
include/video/: terminal.h
src/game/: commands.c  dashboard.c  enterprise.c  galaxy.c  test_galaxy.c
src/video/: main.c  terminal.c  test_video.c
